--- a/METIC.ipynb
+++ b/METIC.ipynb
@@ -3782,8 +3782,11 @@
     }
    ],
    "source": [
-    "print(predicted)\n",
-    "print(label)"
+    "probabilities_df = pd.DataFrame(probabilities)",
+    "probabilities_df.columns = ["Healthy %", "Injury %"]",
+    "probabilities_df.head(15)",
+    "clean_df = probabilities_df.applymap(lambda x: f"{x * 100:.2f}%")",
+    "clean_df"
    ]
   }
  ],
