--- a/METIC.ipynb
+++ b/METIC.ipynb
@@ -3782,10 +3782,10 @@
     }
    ],
    "source": [
-    "probabilities_df = pd.DataFrame(probabilities)",
-    "probabilities_df.columns = ["Healthy %", "Injury %"]",
-    "probabilities_df.head(15)",
-    "clean_df = probabilities_df.applymap(lambda x: f"{x * 100:.2f}%")",
+    "probabilities_df = pd.DataFrame(probabilities)\n",
+    "probabilities_df.columns = [\"Healthy %\", \"Injury %\"]\n",
+    "probabilities_df.head(15)\n",
+    "clean_df = probabilities_df.applymap(lambda x: f\"{x * 100:.2f}%\")\n",
     "clean_df"
    ]
   }
